syntax = "proto3";
package bms;


enum Cellboard {
    Cellboard_CELLBOARD_0 = 0;
    Cellboard_CELLBOARD_1 = 1;
    Cellboard_CELLBOARD_2 = 2;
    Cellboard_CELLBOARD_3 = 3;
    Cellboard_CELLBOARD_4 = 4;
    Cellboard_CELLBOARD_5 = 5;
}

enum BalancingStatus {
    BalancingStatus_OFF = 0;
    BalancingStatus_DISCHARGE = 1;
}

message BOARD_STATUS {
    Cellboard cellboard_id = 1;
    uint32 errors = 2;
    BalancingStatus balancing_status = 3;
    uint64 _inner_timestamp = 4;
}

message TEMPERATURES {
    Cellboard cellboard_id = 1;
    uint32 start_index = 2;
    float temp0 = 3;
    float temp1 = 4;
    float temp2 = 5;
    float temp3 = 6;
    uint64 _inner_timestamp = 7;
}

message VOLTAGES {
    Cellboard cellboard_id = 1;
    uint32 start_index = 2;
    float voltage0 = 3;
    float voltage1 = 4;
    float voltage2 = 5;
    uint64 _inner_timestamp = 6;
}

message BALANCING {
    Cellboard cellboard_id = 1;
    uint32 board_index = 2;
    uint32 cells = 3;
    uint64 _inner_timestamp = 4;
}

message FW_UPDATE {
    Cellboard cellboard_id = 1;
    uint32 board_index = 2;
    uint64 _inner_timestamp = 3;
}

message FLASH_CELLBOARD_0_TX {
    uint64 _inner_timestamp = 1;
}

message FLASH_CELLBOARD_0_RX {
    uint64 _inner_timestamp = 1;
}

message FLASH_CELLBOARD_1_TX {
    uint64 _inner_timestamp = 1;
}

message FLASH_CELLBOARD_1_RX {
    uint64 _inner_timestamp = 1;
}

message FLASH_CELLBOARD_2_TX {
    uint64 _inner_timestamp = 1;
}

message FLASH_CELLBOARD_2_RX {
    uint64 _inner_timestamp = 1;
}

message FLASH_CELLBOARD_3_TX {
    uint64 _inner_timestamp = 1;
}

message FLASH_CELLBOARD_3_RX {
    uint64 _inner_timestamp = 1;
}

message FLASH_CELLBOARD_4_TX {
    uint64 _inner_timestamp = 1;
}

message FLASH_CELLBOARD_4_RX {
    uint64 _inner_timestamp = 1;
}

message FLASH_CELLBOARD_5_TX {
    uint64 _inner_timestamp = 1;
}

message FLASH_CELLBOARD_5_RX {
    uint64 _inner_timestamp = 1;
}


message Pack {
    repeated BOARD_STATUS BOARD_STATUS = 1;
    repeated TEMPERATURES TEMPERATURES = 2;
    repeated VOLTAGES VOLTAGES = 3;
    repeated BALANCING BALANCING = 4;
    repeated FW_UPDATE FW_UPDATE = 5;
    repeated FLASH_CELLBOARD_0_TX FLASH_CELLBOARD_0_TX = 6;
    repeated FLASH_CELLBOARD_0_RX FLASH_CELLBOARD_0_RX = 7;
    repeated FLASH_CELLBOARD_1_TX FLASH_CELLBOARD_1_TX = 8;
    repeated FLASH_CELLBOARD_1_RX FLASH_CELLBOARD_1_RX = 9;
    repeated FLASH_CELLBOARD_2_TX FLASH_CELLBOARD_2_TX = 10;
    repeated FLASH_CELLBOARD_2_RX FLASH_CELLBOARD_2_RX = 11;
    repeated FLASH_CELLBOARD_3_TX FLASH_CELLBOARD_3_TX = 12;
    repeated FLASH_CELLBOARD_3_RX FLASH_CELLBOARD_3_RX = 13;
    repeated FLASH_CELLBOARD_4_TX FLASH_CELLBOARD_4_TX = 14;
    repeated FLASH_CELLBOARD_4_RX FLASH_CELLBOARD_4_RX = 15;
    repeated FLASH_CELLBOARD_5_TX FLASH_CELLBOARD_5_TX = 16;
    repeated FLASH_CELLBOARD_5_RX FLASH_CELLBOARD_5_RX = 17;
}